# shortener-api-fastapi

./: .gitignore  README.md  alembic.ini  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 1cf039b3c97a_init.py  fd9bcd98f62b_.py
shortener/: app.py
shortener/data/database/: crud.py  db.py  url.py
shortener/routers/: index.py
shortener_api/: app.py  main.py
shortener_api/auth/: models.py
shortener_api/data/: db.py
shortener_api/shortener/: __init__.py  crud.py  models.py  routers.py  schemas.py
shortener_api/utils/: random_slug.py
tests/: conftest.py  test_shortener.py  test_slug.py
