[tool.poetry]
name = "shortener-api-fastapi"
version = "0.1.0"
description = ""
authors = ["saalaus <saalaus2@gmail.com>"]
readme = "README.md"
packages = [{include = "shortener_api_fastapi"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.94.1"
sqlalchemy = "^2.0.6"
python-slugify = "^8.0.1"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.2"
sqlalchemy2-stubs = "^0.0.2a32"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
